add images to rests and menus + added more rests
